fixed minor spacing.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -46,7 +46,7 @@ ul {
 }
 
 .li_spaced {
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 
 .week_container {
